wrapping error for all network tabs fixed

--- a/src/platform-styles/network-mentor.scss
+++ b/src/platform-styles/network-mentor.scss
@@ -58,3 +58,8 @@ $pink:#D34D9D;
     right: 5%; 
     width: 300px; 
 }
+
+.card-Body{
+    flex-wrap: wrap;
+    flex-direction: row;
+}
